fix alignment in table of contents

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,17 +45,23 @@ header {
 }
 
 #TableOfContents {
+    margin: auto;
     width: 100%;
     text-align: center;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
+#TableOfContents ul {
+    padding: 0;
+    margin: 0;
+    list-style-position: inside;
+}
+
 #TableOfContents li {
-    padding: 0.25em;
     list-style: none;
     display: inline-block;
-    margin-right: 1rem;
+    padding: 1em;
 }
 
 #TableOfContents a {
